api-gateway/k8/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway-service
  labels:
    app: api-gateway-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway-service
  template:
    metadata:
      labels:
        app: api-gateway-service
    spec:
      containers:
      - name: api-gateway-service
        image: api-gateway-service
        imagePullPolicy: Never
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "300m"
        ports:
          - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway-service
  labels:
    app: api-gateway-service
spec:
  type: NodePort
  ports:
    - port: 8080
      name: http
  selector:
    app: api-gateway-service
