api-gateway/k8/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress 
metadata:
  name: gateway-ingress
spec:
  defaultBackend:
    service:
      name: api-gateway-service
      port:
        number: 8080
  rules:
  - host: ingress.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name:  frontend-service
            port: 
              number: 80

      - path: /api
        pathType: Prefix
        backend:
          service:
            name:  api-gateway-service
            port: 
              number: 8080

      - path: /auth
        pathType: Prefix
        backend:
          service:
            name:  keycloak
            port: 
              number: 80
